# openaq-python

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  mddocs  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml  privileged.yml
.github/workflows/: astro-docs.yml  docs.yml  publish.yml  release-bot.yml  test.yml  types.yml
doc-old/how-to-guides/: integrating-with-pandas.md
doc-old/reference/: responses.md
doc-old/stylesheets/: extra.css
docs/: .gitignore  .vale.ini  README.md  astro.config.mjs  index.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
docs/how-to-guides/: geospatial-queries.md  integrating-with-pandas.md  paging-results.md  query-locations-near-a-point.md  working-with-pagination.md  working-with-rate-limits.md  working-with-the-client.md
docs/overrides/partials/: footer.html
docs/overrides/partials/integrations/analytics/: plausible.html
docs/reference/: asyncopenaq.md  exceptions.md  openaq.md  responses.md
docs/src/assets/: landing.css
docs/src/components/: BorderedIcon.astro  CustomIconCard.astro  FeedbackForm.astro  Footer.astro  Hero.astro  Map.astro  PlaceholderWarning.astro  VersionBadge.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/advanced/: api-key.mdx  json.mdx  logging.mdx  rate-limiting.mdx
docs/src/content/docs/getting-started/: client.mdx  countries.mdx  exceptions.mdx  geospatial-queries.mdx  instruments.mdx  licenses.mdx  locations.mdx  manufacturers.mdx  measurements.mdx  pagination.mdx  parameters.mdx  providers.mdx  quick-start.mdx  rate-limiting.mdx  resources.mdx  responses.mdx  sensors.mdx
docs/src/content/docs/guides/: example.md  geospatial-queries.mdx  paging-results.mdx  pandas.mdx  querying-around-a-city.mdx  querying-measurements.mdx  querying-spatially.mdx  write-to-csv.mdx
docs/src/content/docs/introduction/: about.mdx  contributing.mdx  navigating-the-docs.mdx
docs/src/content/docs/reference/: async-client.mdx  client.mdx  exceptions.mdx  locations.mdx  measurements.mdx
docs/src/content/docs/resources/: countries.mdx  instruments.mdx  licenses.mdx  locations.mdx  manufacturers.mdx  measurements.mdx  owners.mdx  parameters.mdx  providers.mdx  sensors.mdx
docs/src/data/: bbox.json  radius.json
docs/stylesheets/: extra.css
docs/tutorial/: getting-started.md
openaq/: __init__.py  client.py
openaq/_async/: client.py  transport.py
openaq/_async/models/: base.py  countries.py  instruments.py  licenses.py  locations.py  manufacturers.py  measurements.py  owners.py  parameters.py  providers.py  sensors.py
openaq/_sync/: client.py  transport.py
openaq/_sync/models/: base.py  countries.py  instruments.py  licenses.py  locations.py  manufacturers.py  measurements.py  owners.py  parameters.py  providers.py  sensors.py
openaq/core/: __init__.py  constants.py  models.py  responses.py  transport.py  types.py  validators.py
openaq/models/: __init__.py  base.py  countries.py  instruments.py  licenses.py  locations.py  manufacturers.py  measurements.py  owners.py  parameters.py  providers.py  sensors.py
openaq/shared/: client.py  exceptions.py  models.py  responses.py  transport.py  types.py  utils.py  validators.py
openaq/utils/: humps.py
scripts/: plausible.sh
tests/: __init__.py  mocks.py  test_shared_client.py  test_shared_models.py  test_shared_responses.py  test_sync_client.py
tests/integration/: test_async_client.py  test_client.py  test_sync_client.py
tests/resources/: license.json  parameter.json
tests/responses/: countries.json  instruments.json  locations.json  locations_variation.json  manufacturers.json  measurements.json  owners.json  parameters.json  providers.json  sensors.json
tests/sync/: test_sync_resources.py
tests/unit/: __init__.py  mocks.py  test_client.py  test_countries.py  test_exceptions.py  test_instruments.py  test_licenses.py  test_locations.py  test_manufacturers.py  test_measurements.py  test_owners.py  test_parameters.py  test_providers.py  test_sensors.py  test_shared_client.py  test_shared_models.py  test_shared_responses.py  test_sync_client.py  test_transport.py  test_utils.py  test_validators.py
tests/unit/async/: test_async_client.py  test_async_resources.py  test_async_transport.py
tests/unit/async/resources/: test_async_countries.py  test_async_instruments.py  test_async_licenses.py  test_async_locations.py  test_async_manufacturers.py  test_async_measurements.py  test_async_owners.py  test_async_parameters.py  test_async_providers.py  test_async_sensors.py
tests/unit/resources/: country.json  instrument.json  location.json  manufacturer.json  measurement.json  owner.json  provider.json  sensor.json
tests/unit/responses/: countries.json  licenses.json  measurements.json  owners.json  parameters.json  providers.json  sensors.json
tests/unit/sync/: foo_test_sync_resources.py  test_sync_client.py  test_sync_resources.py  test_transport.py
tests/unit/sync/resources/: test_countries.py  test_instruments.py  test_licenses.py  test_locations.py  test_manufacturers.py  test_measurements.py  test_owners.py  test_parameters.py  test_providers.py  test_sensors.py
