[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openaq"
description = "Official OpenAQ Python SDK."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Russ Biggs", email = "russ@openaq.org" },
  { name = "Gabe Fosse", email = "gabe@openaq.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["httpx==0.28.1"]
dynamic = ["version"]

[project.optional-dependencies]
all = ["orjson >=3.2.1"]

[project.urls]
Documentation = "https://github.com/openaq/openaq-python#readme"
Issues = "https://github.com/openaq/openaq-python/issues"
Source = "https://github.com/openaq/openaq-python"

[tool.hatch.version]
path = "openaq/__init__.py"


[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "respx",
  "freezegun",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[tool.hatch.envs.test.scripts]
test-unit = 'pytest tests/unit/ -s -vv'
test-integration = 'pytest tests/integration/ -s -vv'
test = 'pytest tests/ -s -vv'
cov = 'pytest --cov --cov-branch --cov-report=xml'

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.types]
detached = true
dependencies = ["mypy", "lxml","httpx"]

[[tool.mypy.overrides]]
module = ["httpx.*", "openaq"]
ignore_missing_imports = true

[tool.hatch.envs.types.scripts]
check = "mypy -p openaq --install-types --non-interactive"
cov = "mypy -p openaq --install-types --html-report mypy-report"


[tool.hatch.envs.style]
detached = true
dependencies = ["ruff", "black", "isort", "pydocstyle"]

[tool.hatch.envs.style.scripts]
check = ["ruff check", "black --check --diff .", "isort --check-only --diff ."]
fmt = ["isort format", "black .", "check"]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material[imaging]",
  "material-plausible-plugin",
]

[tool.hatch.envs.docs.scripts]
build = ["mkdocs build -c"]
serve = ["mkdocs serve -a localhost:8090"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["openaq/__about__.py", "openaq/vendor/*", "tests/*"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
exclude_also = [
  "raise AssertionError",
  "raise NotImplementedError",
  "@(abc\\.)?abstractmethod",
]

[tool.ruff]
extend-exclude = ["tests"]

[tool.ruff.lint]
ignore = [
  "E501", # line too long, handled by black
  "D104",
]
select = ["D"]
pydocstyle.convention = "google"

[tool.black]
target-version = ['py313']
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
